@@ -244,6 +244,7 @@ Version 1.3
  - Pull Request #712 - New Manager::GetValueListValues function to get the indexes of a List  from out4b (Justin)
  - Pull Request #710 - Added config files for Eurotronic Comet thermostatic radiator valve (Justin)
  - Issue #714 - Z-Wave.Me ZME_KFOB-C 4 Button Key Fob config files from pbda (Justin)
+ - Issue #715 - Add Sensative Strips-MAZW config file from michapr (Justin)
 
 Version 1.2 
  - Released on 15/10/14
